// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`works with diff 1`] = `
<div>
  <div
    className="snapguidist__label"
  >
    label
  </div>
  <div
    className="snapguidist__code"
  >
    <CodeMirror
      options={
        Object {
          "mode": "diff",
          "theme": "theme",
        }
      }
      value="value"
    />
  </div>
</div>
`;

exports[`works with jsx 1`] = `
<div>
  <div
    className="snapguidist__label"
  >
    label
  </div>
  <div
    className="snapguidist__code"
  >
    <CodeMirror
      options={
        Object {
          "mode": "jsx",
          "theme": "theme",
        }
      }
      value="value"
    />
  </div>
</div>
`;
